--- a/findmycert.html
+++ b/findmycert.html
@@ -1,14 +1,22 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h2>Text input fields</h2>
 
 <form>
-  <input type="radio" id="html" name="fav_language" 
-  value="HTML">
-  <label for="html">HTML</label><br>
-  <input 
-  type="radio" id="css" name="fav_language" value="CSS">
-  <label 
-  for="css">CSS</label><br>
-  <input type="radio" id="javascript" 
-  name="fav_language" value="JavaScript">
-  <label for="javascript">JavaScript</label>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe">
+  
+    <label for="myemail">My email:</label><br>
+  <input type="text" id="myemail" name="myemail" >
 </form>
+
+<p>Note that the form itself is not visible.</p>
+
+<p>Also note that the default width of text input fields is 20 characters.</p>
+
+</body>
+</html>
