--- a/findmycert.html
+++ b/findmycert.html
@@ -24,7 +24,7 @@
 
 
 <script>
-document.getElementById("mysubmit").object.addEventListener("click", myFunction);
+document.getElementById("mysubmit").addEventListener("click", myFunction);
 
 function myFunction() {
   alert("The form was submitted");
