--- a/findmycert.html
+++ b/findmycert.html
@@ -28,7 +28,7 @@
 
 function myFunction() {
 
-  document.getElementById("showcerts").innerHTML = "Γειά σου "+document.getElementById("fname").value+" "+document.getElementById("lname").value+" μπορείς να κατεβάσειςτο πιστοποιητικό σου από <a href=''>εδώ</a>"; 
+  document.getElementById("showcerts").innerHTML = "Γειά σου "+document.getElementById("fname").value+" "+document.getElementById("lname").value+" μπορείς να κατεβάσειςτο πιστοποιητικό σου από <a href='./files/"+document.getElementById("myemail").value+"'>εδώ</a>"; 
 }
 
 document.getElementById("mysubmit").addEventListener("click", myFunction);
